; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/extr_intel_sideband.c_vlv_punit_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/extr_intel_sideband.c_vlv_punit_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_i915_private = type { i32 }

@IOSF_PORT_PUNIT = common dso_local global i32 0, align 4
@SB_CRWRDA_NP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlv_punit_write(%struct.drm_i915_private* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.drm_i915_private*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.drm_i915_private* %0, %struct.drm_i915_private** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.drm_i915_private*, %struct.drm_i915_private** %4, align 8
  %8 = call i32 @PCI_DEVFN(i32 0, i32 0)
  %9 = load i32, i32* @IOSF_PORT_PUNIT, align 4
  %10 = load i32, i32* @SB_CRWRDA_NP, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @vlv_sideband_rw(%struct.drm_i915_private* %7, i32 %8, i32 %9, i32 %10, i32 %11, i32* %6)
  ret i32 %12
}

declare dso_local i32 @vlv_sideband_rw(%struct.drm_i915_private*, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @PCI_DEVFN(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
